--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://hat.thatteidlikaalsoup.team/"
 languageCode = "en-us"
 title = "Ultimate Frisbee Hat"
 theme = "alpha-church"
