Add links to FB and Insta.

--- a/config.toml
+++ b/config.toml
@@ -36,21 +36,9 @@ googleAnalytics = ""
     weight = 1
 
   [[menu.main]]
-    name = "Leaders"
-    parent = "About"
-    url = "/leaders"
-    weight = 2
-
-  [[menu.main]]
     name = "Resources"
     url = "#"
     weight = 3
-
-  [[menu.main]]
-    name = "Sermons"
-    url = "/sermons"
-    parent = "Resources"
-    weight = 1
 
   [[menu.main]]
     name = "Blog"
@@ -72,18 +60,6 @@ googleAnalytics = ""
   bible_popups = "faithlife" #faithlife, blb
   bible_version = "CSB" #HCSB, NIV, NLT, ESV, etc.
   #instant_page = true
-
-  [params.podcast]
-    title = "Listen to Alpha Church"
-    subtitle = ""
-    summary = "Alpha-Church sermons, talks, messages—podcasted."
-    email = "test@example.com"
-    copyright = "Podcast: [CC0 (public domain)](//creativecommons.org/publicdomain/zero/1.0/)"
-    image = "img/podcast-cover.jpg"
-    category = "Religion & Spirituality"
-    sub_category = "Christianity"
-    iTunes = "https://itunes.apple.com/us/podcast/tgc-word-of-the-week/id1034013280"
-    feed = "https://www.thegospelcoalition.org/podcasts/word-of-the-week/feed/?feed=podcast"
 
   [params.map]
     service = "osm" #"osm" for OpenStreetMaps or "google"
@@ -117,22 +93,16 @@ googleAnalytics = ""
                   ]
 
     [[params.links]]
-      service = "Twitter"
-      icon = "fa-twitter"
+      service = "Instagram"
+      icon = "fa-instagram"
       icon_pack = "fab"
-      link = "//twitter.com/"
+      link = "//instagram.com/thatteidlikaalsoup"
 
     [[params.links]]
       service = "Facebook"
       icon = "fa-facebook"
       icon_pack = "fab"
-      link = "//facebook.com/"
-
-    [[params.links]]
-      service = "Podcast"
-      icon = "fa-podcast"
-      icon_pack = "fas"
-      link = "/sermons/index.xml"
+      link = "//www.facebook.com/Thatteidlikaalsoup/"
 
     [[params.links]]
       service = "Full RSS Feed"
