--- a/config.toml
+++ b/config.toml
@@ -57,19 +57,14 @@ googleAnalytics = ""
 
   bible_popups = "faithlife" #faithlife, blb
   bible_version = "CSB" #HCSB, NIV, NLT, ESV, etc.
-  #instant_page = true
+  instant_page = true
 
   [params.map]
     service = "osm" #"osm" for OpenStreetMaps or "google"
     # For Open Street Map widgets
-    latitude = "48.8530"
-    longitude = "2.3498"
+    latitude = "12.9385184"
+    longitude = "77.5894409"
     zoom = "18"
-    # If you want to use google maps you'll need an API Key from Google https://developers.google.com/maps/documentation/embed/get-api-key
-    #service = "google"
-    #api_key = "XXXXXXXX"
-    #language = "fr" #Optional
-    #region = "FR" #Optional
 
   [params.contact]
     #Use this section to automate contact form.
