--- a/config.toml
+++ b/config.toml
@@ -55,9 +55,9 @@ googleAnalytics = ""
   subtitle = "Beginner's Ultimate Frisbee Hat"
   languageCode = "en" # For accessibility this needs to be set. You can find all language codes at https://www.w3schools.com/tags/ref_language_codes.asp
 
-  bible_popups = "faithlife" #faithlife, blb
-  bible_version = "CSB" #HCSB, NIV, NLT, ESV, etc.
-  instant_page = true
+  # bible_popups = "faithlife" #faithlife, blb
+  # bible_version = "CSB" #HCSB, NIV, NLT, ESV, etc.
+  # instant_page = false
 
   [params.map]
     service = "osm" #"osm" for OpenStreetMaps or "google"
